# involute-verify

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: release.yml
crates/involute-verify/: Cargo.toml  README.md
crates/involute-verify/src/: cache.rs  certs.rs  commitment.rs  lib.rs  log.rs  main.rs  puzzle.rs  recording.rs  rejection.rs  replay.rs  scramble.rs  verification.rs  verify.rs
crates/involute-verify/tests/: box4_fixture.rs
crates/involute-verify/tests/fixtures/: 2026-07-09 INVOLUTE Replay (box4) 0h00m09s32.json
crates/involute-verify/tests/fixtures/box4/: data.yaml
crates/timecheck/: Cargo.toml  README.md
crates/timecheck/src/: drand.rs  lib.rs  tsa.rs
docs/: stm.md
