[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.85.0"

[workspace.dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
drand-verify = "0.6.2"
hex = { version = "0.4.3", features = ["serde"] }
hex-literal = "1.1.0"
serde = { version = "1.0.217", features = ["derive"] }
sha2 = "0.10"
tempfile = "3.26.0"
thiserror = "2.0.18"
tsp-http-client = "0.1.0"
ureq = { version = "3.2.0", features = ["json"] }
