[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.85.0"

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22"
blake3 = "1.8"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
drand-verify = "0.6.2"
hex = { version = "0.4.3", features = ["serde"] }
hex-literal = "1.1.0"
rand_chacha = "0.3"
rand_core = "0.6"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = "3.26.0"
thiserror = "2.0.18"
tsp-http-client = "0.1.0"
ureq = { version = "3.2.0", features = ["json"] }

[profile.release]
opt-level = "z"
strip = true
