[package]
name = "timecheck"
description = "Scheme for cheating-resistant deterministic games using randomness beacons and time stamp authorities"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository = "https://github.com/cjgriscom/involute-verify"
readme = "README.md"
# Upstream author (Hyperspeedcube); local TSA extensions for Involute.
authors = ["Andrew Farkas"]

[dependencies]
chrono = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

# drand-only
drand-verify = { workspace = true, optional = true }
hex-literal = { workspace = true, optional = true }
ureq = { workspace = true, optional = true }

# TSA-only
tempfile = { workspace = true, optional = true }
tsp-http-client = { workspace = true, optional = true }

[dev-dependencies]
sha2 = { workspace = true }

[features]
default = ["drand", "tsa"]
drand = ["drand-verify", "hex-literal", "ureq"]
tsa = ["tempfile", "tsp-http-client"]
